# SwallV2Capstone

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  bitbucket-pipelines.yml  client-docker-compose.yaml  client.Dockerfile  docker-compose.yaml
apps/cli-tool/: cli-tool.py  prettytable.py  swall_api.py  swall_socket.py
apps/idle/: idle.py
apps/octranspo/OCTranspo-Carleton/: README.md
apps/octranspo/OCTranspo-Carleton/src/: App.jsx  BusRoute.jsx  BusStop.css  BusStop.jsx  TripTime.css  TripTime.jsx
apps/octranspo/OCTranspo-Carleton/src-tauri/: Cargo.toml
apps/octranspo/OCTranspo-Carleton/src-tauri/src/: main.rs
apps/test/app_controller_tests/: app_controller_test_kill.py  app_controller_test_list.py  app_controller_test_spawn.py
crates/swall_compositor/: Cargo.toml
crates/swall_compositor/src/: config.rs  custom_xdg_shell_impl.rs  lib.rs
crates/swall_compositor/src/compositor/: api.rs  mod.rs
crates/swall_compositor/src/controller/: controller.rs  mod.rs  socket.rs
crates/swall_compositor/src/util/: async_wayland_server.rs  mod.rs
crates/swall_gst_compositor/: Cargo.toml  test.sh
crates/swall_gst_compositor/src/: lib.rs  translate_event.rs
crates/swall_gst_event_capture/: Cargo.toml
crates/swall_gst_event_capture/src/: lib.rs
crates/swall_gst_input/: Cargo.toml  test.sh
crates/swall_gst_input/src/: config.rs  encoding.rs  input_client.rs  input_server.rs  lib.rs
crates/swall_gst_tokio/: Cargo.toml
crates/swall_gst_tokio/src/: lib.rs
dev-image/: 0001-gtkwaylandsink-Added-fullscreen-option.patch  0002-gtk-Fix-critical-caused-by-pointer-movement-when-str.patch  comfort.sh
dump/: graph_all.sh
scripts/client/: weston.ini
scripts/server/: send_pipeline.bash  swall.service
