[package]
name = "swall_gst_compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
gstreamer = "0.22.1"
gstreamer-base = "0.22.0"
json5 = "0.4.1"
once_cell = "1.19.0"
swall_compositor = { path = "../swall_compositor" }
swall_gst_tokio = { version = "0.1.0", path = "../swall_gst_tokio" }
thiserror = "1.0.57"
# TODO: Make this not use full?
tokio = { version = "1.35.1", features = ["full"] }
