[package]
name = "swall_gst_input"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bytes = "1.5.0"
futures = "0.3.30"
gstreamer = "0.22.1"
gstreamer-base = "0.22.0"
gstreamer-video = { version = "0.22.0", features = ["v1_22"] }
indexmap = "2.2.3"
json5 = "0.4.1"
once_cell = "1.19.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
swall_gst_tokio = { version = "0.1.0", path = "../swall_gst_tokio" }
thiserror = "1.0.57"
# TODO: Make this not use full?
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
